# Icarus

./: .drone.yml  CONTRIBUTING.md  LICENSE  README.md  architecture.md
.github/workflows/: aurora.yml  ceres-web.yml  ceres.yml  flora.yml  icarus-web.yml  icarus.yml  iris.yml  makemake.yml  starplex-web.yml  starplex.yml
aurora/: Cargo.toml  Dockerfile  README.md  aurora.toml  aurora_0.toml  aurora_1.toml
aurora/src/: config.rs  endpoint.rs  endpoint_config.rs  endpoint_metadata.rs  main.rs  main_0.rs  main_1.rs
ceres/: Dockerfile  README.md  buffer.go  config.go  cors.go  go.mod  main.go  request.go  router.go  types.go
ceres-web/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
ceres-web/src/: App.vue  types.ts
ceres-web/src/components/: Loading.vue
docs/: architecture.md  base.md  build-a-random-bento-box-grip.md  ci-cd.md  drone-ci.md  harbor.md  iris-raft.md  mongodb-replica-set.md  redis-cluster.md
docs/sample/iris_raft/: Cargo.toml  README.md
docs/sample/iris_raft/src/: client.rs  main.rs  main_0.rs  main_1.rs  server.rs  state.rs
docs/sample/mongodb/: docker-compose.yml  mongod.conf
docs/sample/starplex-web/: docker-compose.yml
flora/: Cargo.toml  Dockerfile
flora/src/: endpoint.rs  main.rs  service.rs
icarus/: Cargo.toml  Dockerfile  README.md  package-lock.json  package.json
icarus-web/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
icarus-web/src/: App.tsx  config.ts  main.tsx  types.ts
icarus-web/src/components/: CheckIcon.tsx  EditIcon.tsx  ExploreServiceTimeChip.tsx  EyeIcon.tsx  Footer.tsx  TrashIcon.tsx
icarus-web/src/pages/: Activity.tsx  Config.tsx  Explore.tsx  Message.tsx
icarus-web/src/screens/: Error.tsx  Home.tsx  Login.tsx  NotFound.tsx
icarus-web/src/stores/: index.ts
icarus/app/: page.tsx
icarus/src/: config.rs  endpoint.rs  main.rs
icarus/src/endpoint/: config_center.rs  login.rs  message_queue.rs  service_explore.rs
iris/: Cargo.toml  README.md
iris/src/: gossip.rs  lib.rs  message.rs  raft.rs
iris/src/gossip/: client.rs  config.rs  endpoint_action.rs  endpoint_data.rs  endpoint_metadata.rs  endpoint_swap.rs  node.rs  state.rs
iris/src/raft/: action.rs  append.rs  client.rs  config.rs  endpoint_action.rs  endpoint_append.rs  endpoint_check.rs  endpoint_metadata.rs  endpoint_vote.rs  log.rs  node.rs  state.rs  vote.rs
iris/src/security/: secret.rs
makemake/: Cargo.toml  Dockerfile  README.md
makemake/src/: config.rs  endpoint.rs  main.rs
makemake/src/raft/: append.rs  client.rs  endpoint_append.rs  endpoint_check.rs  endpoint_metadata.rs  endpoint_vote.rs  log.rs  node.rs
pallas/: README.md  pyproject.toml
salacia/: build.gradle.kts  settings.gradle.kts
salacia/gradle/wrapper/: gradle-wrapper.properties
salacia/src/main/java/io/hanbings/server/: Main.java
sample/drone/: docker-compose.yml
starplex/: Dockerfile  README.md  build.gradle.kts  settings.gradle.kts
starplex-web/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  types.ts
starplex-web/src/: App.tsx  config.ts  types.ts
starplex-web/src/components/: BentoBlock.tsx  Button.tsx  Document.tsx  Footer.tsx
starplex-web/src/pages/: Home.tsx  Profile.tsx  Rank.tsx
starplex-web/src/screens/: Error.tsx  Home.tsx  Login.tsx  Login.tsx~  NotFound.tsx  OAuth.tsx  Profile.tsx  Rank.tsx  Welcome.tsx
starplex-web/src/stores/: account.ts  index.ts  token.ts
starplex-web/src/utils/: bentobox.ts
starplex/src/main/java/io/hanbings/server/starplex/: StarplexApplication.java
starplex/src/main/resources/: application.properties
starplex/src/test/java/io/hanbings/server/starplex/: StarplexApplicationTests.java
starplex/starplex-aurora-client/src/main/java/io/hanbings/server/: AuroraClient.java
starplex/starplex-flora-client/src/main/java/io/hanbings/server/: FloraClient.java  FloraConfig.java
starplex/starplex-makemake-client/src/main/java/io/hanbings/server/: MakemakeClient.java  MakemakeConfig.java  (+1 more)
(+39 files in other folders)
