[package]
name = "aurora"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aurora"
path = "src/main.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "main_0"
path = "src/main_0.rs"

[[bin]]
name = "main_1"
path = "src/main_1.rs"

[dependencies]
iris = { path = "../iris" }
log = "0.4"
env_logger = "0.11"
figment = { version = "0.10", features = ["toml", "json"] }

actix-web = "4"
actix-web-httpauth = "0.8.2"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.12.8"
