[package]
name = "flora"
version = "0.1.0"
edition = "2021"

[dependencies]
iris = { path = "../iris" }
log = "0.4"
env_logger = "0.11"
figment = { version = "0.10", features = ["toml"] }

actix-web = "4"
actix-web-httpauth = "0.8.2"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = "0.12.8"
