[package]
name = "makemake"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "makemake"
path = "src/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.11"
figment = { version = "0.10", features = ["toml", "json"] }

actix-web = "4"
actix-web-httpauth = "0.8.2"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.8", features = ["json"] }
futures = "0.3.31"
rand = "0.8.5"
